* V1.8.6.1 
  * fixed minor bug in API when starting CK web service and viewing entry (wcid option)
  * allow ~ in an archive name when archiving CK entries using 'ck zip ...'

* V1.8.6
  * added direct update of kernel vars via CMD similar to Git. For example:

    $ ck setup kernel --var.default_license="See CK LICENSE.txt for licensing details"
    $ ck setup kernel --var.default_copyright="See CK COPYRIGHT.txt for copyright details"
    $ ck setup kernel --var.default_developer="cTuning foundation"
    $ ck setup kernel --var.default_developer_email="admin@cTuning.org"
    $ ck setup kernel --var.default_developer_webpage="http://cTuning.org"

  * added -f flag to force removal of entries (i.e. ck rm x:y -f) to be compatible
    with bash rm -f ...

  * added JSON sorting when viewing entries from CMD (via ck load x:y)

* V1.8.5 
  * do not crash if renewing repo while staying inside it
  * fixed bug in "system_with_timeout" (was always returning error) - required by ck-clsmith
  * added "skip_sort" to "select" and "select_uoa" functions
  * added cfg['internal_keys'] to be able to check them in input
  * fixed minor bug when @file.json from CMD not found

* V1.8.4
  * fixed 'ck status' and version comparison
  * minor fix when listing all modules in mediawiki format

* V1.8.3dev
  * fixed minor issue in ck.list_all_files() with 'limit' parameter

* V1.8.2
  * fixed bug in 'remove_action' in CK kernel
  * fixed issue in "run_and_get_stdout" on Windows
  * printing module UOA in square brackets when error (useful for debugging)
  * added 'shell' parameter to kernel 'run_and_get_stdout' function
    (needed for ck-crowdnode)
  * added 'eout' function to kernel to print to stderr
    (useful for ck-crowdnode-server)

* V1.8.1
  * added continuous integration via Travis (Linux) and AppVeyor (Windows)
  * added CoverAlls to measure test coverage
  * added possibility to skip listing of all modules from private repositories
  * fixed error in 'ck edit'