@@ -1,4 +1,5 @@
 * V1.8.6.1 
+  * fixed major bug with default license/author (to avoid crashing when adding new module)
   * fixed minor bug in API when starting CK web service and viewing entry (wcid option)
   * allow ~ in an archive name when archiving CK entries using 'ck zip ...'
 
